# ai-data-marketplace

./: .env.example  .env.prod.example  .env.production.example  .gitignore  CLAUDE.md  Caddyfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
algorithms/: publish-local.sh  publish.sh
backend/: .dockerignore  Dockerfile  go.mod  go.sum
deploy/: README.md  docker-compose.prod.yml
docs/: P3-MVP-用户故事与接口列表.md  Step3-MVP技术栈与关键验证点.md  Step4-ER图+详细接口+第一版PR计划.md  Verdant-Oasis-品牌统一替换确认清单.md  hardening-ratelimit-secondary-mutations.md  hardening-report-ember-cross-audit.md  上线就绪清单.md  上线赚钱-Oasis-Verify-GoLive-Runbook.md  交接-C2D隐私计算-完整现状与落地路径.md  交接-Oasis可信数据市场-全貌与下一步.md  交接-v2-C2D与Skills双线-现状与四向路径.md  交接-v3-C2D四向与数据信任-完整现状.md  交接-v4-完整状态与DeepSeek执行规划.md  交接-v5-安全审计与C2D全栈-现状与续作.md  交接-v5-完成路径与最终方案.md  交接-可验证证据层-下一步.md  任务书-deepseek-v2-测试回灌+方向I-审计日志.md  任务书-deepseek-v3-方向JKL-质检重试+订单打包+收藏.md  任务书-deepseek-v4-方向MN-CI清债与去flake.md  任务书-deepseek-v5-W1+W2+W3.md  任务书-deepseek-v5-方向OPQR-QA+提现+异常告警+测试覆盖.md  任务书-deepseek-v6-方向STUV-合规+邮件+运维+认证-彻底完成.md  任务书-deepseek-v7-收官-E2E+API文档+安全审计+覆盖.md  内容-数据集完整性体检-引流稿.md  分发工具包-Oasis-Verify.md  创始人-科研卖家拉新手册.md  商业打法-Oasis-Verify-验证SaaS.md  复现-独立验证C2D结果.md  威胁模型与保证-C2D可验证证据层.md  安全审计报告-rounds-2-3-完整posture.md  战略-可信数据市场-定位与冷启动.md  战略审视-护城河可信度与呈现强化计划.md  技术展示-可验证证据层.md  规划-C2D可验证溯源-完整路线图.md  设计与实施文档-v2.0.md  设计文档-P3-机密计算与远程证明(L2).md  设计文档-整体架构与核心模块.md  (+9 more)
services/paperguard-sidecar/: Dockerfile  README.md  app.py  pyproject.toml  screening.py
services/paperguard-sidecar/tests/: test_contract.py  test_screening.py
(+630 files in other folders)
